# QHXD_Web_NUC

./: DONE.md  FORMAL_ACCEPTANCE.md  NUC_DO.md  NUC_DO2.md  NUC_DO2_1.md  NUC_DO3.md  NUC_DO4.md  NUC_DO5.md  NUC_DO6.md  NUC_DO6_1.md  PHASE3_ROUND1映射确认.md  PHASE3_ROUND2验收.md  PHASE3_ROUND3_1验收.md  PHASE3_ROUND3验收.md  README.md  ROUND2验收.md  ROUND3验收.md  ROUND4验收.md  pyproject.toml
configs/: cboard_imu.sample.json  default_config.json
examples/: internal_state.sample.json
nuc_state_uploader/: __init__.py  config.py  imu_bridge.py  main.py  mission_server.py  rk3588_sender.py  rtt_state_collector.py  runtime_state.py  state_collector.py  state_mapper.py
runtime/: mission_state.json
standard_robot_pp_ros2/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODEX_POINTCLOUD_NAV_INVESTIGATION.md  COMM_CONTRACT.md  COMM_MAPPING.md  CONTRIBUTING.md  NOTDEFINE.md  README.md  TARGET_ENV_CHECKLIST.md  TODOANDDONE.md  dependencies.repos  package.xml
standard_robot_pp_ros2/.github/workflows/: ci.yml  colcon_test.sh
standard_robot_pp_ros2/config/: standard_robot_pp_ros2.yaml
standard_robot_pp_ros2/include/standard_robot_pp_ros2/: crc8_crc16.hpp  gimbal_manager.hpp  packet_typedef.hpp  robot_info.hpp  standard_robot_pp_ros2.hpp
standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py
standard_robot_pp_ros2/script/: create_udev_rules.sh
standard_robot_pp_ros2/src/: crc8_crc16.cpp  gimbal_manager.cpp  standard_robot_pp_ros2.cpp
tests/: test_imu_bridge.py  test_runtime_state.py  test_state_collector.py  test_state_mapper.py
